--- a/main.css
+++ b/main.css
@@ -59,36 +59,35 @@ body {
 /* add appropriate colors to linkedin, twitter and google buttons */
 
 .linkedin{
-    background-color: #2867B2;
     color: white;
+    text-align: center;
 }
 .twitter {
-    background-color: #55ACEE;
     color: white;
 }
 
 .google {
-    background-color: #dd4b39;
+    
     color: white;
 }
 
 .btn {
     width: 100%;
     padding: 12px;
+    color: white;
+    background-color: black;
     border: none;
     border-radius: 4px;
     margin: 5px 0 5px 2%;
-    opacity: 0.85;
+    opacity: 0.75;
     display: inline-block;
     font-size: 17px;
     line-height: 20px;
+    text-align: center;
     text-decoration: none; /* remove underline from anchors */
+    
 }
 .btn:hover {
     opacity: 1;
-}
-iframe{
-    width: 250;
-    height:auto;
 }
 
